# loading_bar

./: Cargo.toml  README.md  TODO.md  index.html  index.md
.github/workflows/: cargo_fmt.yml  gh_pages_doc_update.yml  publish.yml
doc/: search-index.js  source-files.js
doc/doc/loading_bar/: all.html  enum.Color.html  enum.LoadingBarOptions.html  index.html  sidebar-items.js  struct.LoadingBar.html
doc/doc/loading_bar/auto_run/: enum.Types.html
doc/gh_pages/: settings.html
doc/gh_pages/loading_bar/: enum.Types.html  index.html  struct.LoadingBar.html
doc/gh_pages/loading_bar/text_loading_bar/: struct.TextLoadingBarAutoPoint.html
doc/gh_pages/src/loading_bar/: lib.rs.html  text_loading_bar.rs.html
doc/implementors/core/clone/: trait.Clone.js
doc/loading_bar/: all.html  enum.Color.html  enum.LoadingBarOptions.html  enum.Types.html  index.html  sidebar-items.js
doc/loading_bar/loading_bar/: enum.LoadingBarOptions.html  index.html  sidebar-items.js  struct.LoadingBar.html
doc/loading_bar/simple_loading_bar/: enum.SimpleLoadingBarOptions.html  index.html  sidebar-items.js  struct.SimpleLoadingBar.html
doc/loading_bar/text_loading_bar/: enum.Color.html  enum.TextLoadingBarOptions.html  index.html  sidebar-items.js  struct.TextLoadingBar.html  struct.TextLoadingBarAutoOptions.html  struct.TextLoadingBarAutoPoint.html
doc/src/loading_bar/: lib.rs.html  loading_bar.rs.html  simple_loading_bar.rs.html  text_loading_bar.rs.html
src/: lib.rs  loading_bar.rs  main.rs  simple_loading_bar.rs  text.rs  text_loading_bar.rs
(+21 files in other folders)
