[package]
name = "loading_bar"
version = "1.0.1"
license = "MIT"
authors = ["Mendel Rubin <mendelsshop@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/mendelsshop/loading_bar"
repository = "https://github.com/mendelsshop/loading_bar"
description = "Simple CLI loading bar crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.23.2"
